--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1777,22 +1777,28 @@ config MSM_CPU_FREQ_MIN
 endif # CPU_FREQ_MSM
 
 
+config MSM_CPUFREQ_LIMITER
+	tristate "MSM CPU frequency limiter"
+	default n
+	help
+	  This driver limits MSM CPU frequency through sysfs file system.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_stats.
+
+	  If in doubt, say N.
+
 config CPU_VOLTAGE_TABLE
 	bool "Enable CPU Voltage Table via sysfs for adjustements"
 	default n
 	help
 	  Krait User Voltage Control
 
-config MSM_CPUFREQ_LIMITER
-    tristate "MSM CPU frequency limiter"
-    default n
-    help
-      This driver limits MSM CPU frequency through sysfs file system.
-
-      To compile this driver as a module, choose M here: the
-      module will be called cpufreq_stats.
-
-      If in doubt, say N.
+config LOW_CPUCLOCKS
+	bool "Enable ultra low CPU clocks"
+	default n
+	help
+	  Ultra low cpu frequencies enabled for CPU and L2 Cache
 
 config MSM_AVS_HW
 	bool "Enable Adaptive Voltage Scaling (AVS)"
