Added Power Suspend code. by Jean-Pierre Rasquin <yank555.lu@gmail.com>
Code changes are from furnace kernel source!

http://forum.xda-developers.com/showthread.php?t=2572992

https://github.com/dorimanx/Dorimanx-LG-G2-D802-Kernel/tree/furnace-kernel

--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -723,3 +723,5 @@ CONFIG_ATAGS_PROC=y
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
+
+CONFIG_POWERSUSPEND=y
