--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -723,3 +723,5 @@ CONFIG_ATAGS_PROC=y
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
+
+CONFIG_POWERSUSPEND=y
