LINARO fixes for better ARM support. + small code corrections. by @bruce2728
https://github.com/bruce2728/kernel_lge_d802/commit/97280f182e1fbd1e36300727ae0ce50efa7f153f
https://github.com/bruce2728/kernel_lge_d802/commit/eee1f26f35502ca2f0fb3424309de7aea53d2c94

--- a/arch/arm/boot/compressed/Makefile
+++ b/arch/arm/boot/compressed/Makefile
@@ -29,6 +29,14 @@ AFLAGS_head.o += -Wa,-mcpu=cortex-a15
 ifeq ($(CONFIG_CRYPTO_FIPS),y)
 AFLAGS_head.o += -DFIPS_KERNEL_RAM_BASE=0x80208000
 endif
+
+AFLAGS_head.o += -Wa,-march=armv7-a$(plus_sec)
+AFLAGS_head.o += -Wa,-mcpu=cortex-a15
+AFLAGS_misc.o +=-Wa,-march=armv7-a$(plus_sec)
+AFLAGS_misc.o += -Wa,-mcpu=cortex-a15
+AFLAGS_decompress.o += -Wa,-march=armv7-a$(plus_sec)
+AFLAGS_decompress.o += -Wa,-mcpu=cortex-a15
+
 HEAD	= head.o
 AFLAGS_misc.o += -Wa,-march=armv7-a$(plus_sec)
 AFLAGS_misc.o += -Wa,-mcpu=cortex-a15
