--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -708,3 +708,13 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
+
+##########################################################
+# kexec hardboot support
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_ANDROID_PERSISTENT_RAM=y
+CONFIG_KEXEC_HB_PAGE_ADDR=0x8fdff000
+CONFIG_END_MEM=0xffffffff
+CONFIG_HAVE_END_MEM=y
+CONFIG_ATAGS_PROC=y
