--- a/arch/arm/configs/aosp_jf_defconfig
+++ b/arch/arm/configs/aosp_jf_defconfig
@@ -83,6 +83,7 @@ CONFIG_SMP=y
 # CONFIG_SMP_ON_UP is not set
 CONFIG_SCHED_MC=y
 CONFIG_PREEMPT=y
+CONFIG_QUOTA=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_VMALLOC_RESERVE=0x19000000
