--- a/block/Makefile
+++ b/block/Makefile
@@ -22,3 +22,4 @@ obj-$(CONFIG_IOSCHED_FIOPS)	+= fiops-iosched.o
 
 obj-$(CONFIG_BLOCK_COMPAT)	+= compat_ioctl.o
 obj-$(CONFIG_BLK_DEV_INTEGRITY)	+= blk-integrity.o
+obj-$(CONFIG_IOSCHED_ZEN)	+= zen-iosched.o
