--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -641,3 +641,8 @@ CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 
  CONFIG_IOSCHED_FIOPS=y
+ CONFIG_IOSCHED_ZEN=y
+#CONFIG_DEFAULT_ZEN is not set
+
+CONFIG_IOSCHED_TRIPNDROID=y
+#CONFIG_DEFAULT_TRIPNDROID is not set
