block:Add tripndroid io sched and enable it
Change-Id: I7e45d6c77df752671cb2c5c4fa592c351014eb52

--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -638,8 +638,15 @@ CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_FORCE_FAST_CHARGE=y
+
 # CONFIG_QUICK_WAKEUP is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_KERNEL_GZIP=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_INTELLI_PLUG=y
+
+CONFIG_IOSCHED_ZEN=y
+#CONFIG_DEFAULT_ZEN is not set
+
+CONFIG_IOSCHED_TRIPNDROID=y
+#CONFIG_DEFAULT_TRIPNDROID is not set
