--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -573,4 +573,8 @@ CONFIG_CRYPTO_LZO=y
 CONFIG_CRC_CCITT=y
 CONFIG_LIBCRC32C=y
 CONFIG_DECOMPRESS_LZMA=y
+
 CONFIG_FORCE_FAST_CHARGE=y
+
+CONFIG_LOW_CPUCLOCKS=y
+
