enable power efficient workqueues

--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -574,5 +574,7 @@ CONFIG_CRC_CCITT=y
 CONFIG_LIBCRC32C=y
 CONFIG_DECOMPRESS_LZMA=y
 
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+
 CONFIG_FORCE_FAST_CHARGE=y
 
