--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -575,6 +575,7 @@ CONFIG_LIBCRC32C=y
 CONFIG_DECOMPRESS_LZMA=y
 
 CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_AUTOSMP=y
 
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
