defconfig: enable cpufreq_limiter
Change-Id: Ideb45e614e9a0c17b2b11ca6ddfadc0b281cdcfa

--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -622,4 +622,6 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 # BuffCore
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_LOW_CPUCLOCKS=y
- CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_AUTOSMP=y
