defconfig: enable cpufreq_limiter

--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -574,7 +574,10 @@ CONFIG_CRC_CCITT=y
 CONFIG_LIBCRC32C=y
 CONFIG_DECOMPRESS_LZMA=y
 
+CONFIG_MSM_CPUFREQ_LIMITER=y
+
 CONFIG_CPU_VOLTAGE_TABLE=y
+
 CONFIG_AUTOSMP=y
 
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
