defconfig: add low_cpuclocks

--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -580,6 +580,8 @@ CONFIG_CPU_VOLTAGE_TABLE=y
 
 CONFIG_AUTOSMP=y
 
+CONFIG_LOW_CPUCLOCKS=y
+
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 CONFIG_FORCE_FAST_CHARGE=y
