defconfig: fix def gov & hotplug?

--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -572,6 +572,11 @@ CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRC_CCITT=y
 CONFIG_LIBCRC32C=y
+
+#Custom edits
+
+CONFIG_HOTPLUG_CPU=y
+CONFIG_HOTPLUG=y
 CONFIG_DECOMPRESS_LZMA=y
 
 CONFIG_MSM_CPUFREQ_LIMITER=y
@@ -584,5 +589,6 @@ CONFIG_LOW_CPUCLOCKS=y
 
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
-CONFIG_FORCE_FAST_CHARGE=y
+# default Gov
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 
