--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -576,7 +576,7 @@ CONFIG_LIBCRC32C=y
 #Custom edits
 
 # CONFIG_HOTPLUG_CPU=y
-# CONFIG_HOTPLUG=y
+CONFIG_HOTPLUG=y
 CONFIG_DECOMPRESS_LZMA=y
 
 CONFIG_MSM_CPUFREQ_LIMITER=y
