--- a/arch/arm/configs/aosp_jf_defconfig
+++ b/arch/arm/configs/aosp_jf_defconfig
@@ -4,6 +4,7 @@ CONFIG_LOCALVERSION="-aosp"
 CONFIG_KERNEL_XZ=y
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
+CONFIG_RCU_BOOST=y
 CONFIG_IKCONFIG=y
 CONFIG_LOG_BUF_SHIFT=18
 CONFIG_CGROUPS=y
