jf_defconfig: enable CONFIG_BLUEDROID_PM
Signed-off-by: Marco Zanin (B--B) <mrczn.bb@gmail.com>

--- a/arch/arm/configs/aosp_jf_defconfig
+++ b/arch/arm/configs/aosp_jf_defconfig
@@ -239,6 +239,7 @@ CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
+CONFIG_BLUEDROID_PM=y
 CONFIG_SAMSUNG_JACK=y
 CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
