defconfig: increment version number - buffcore oreo is V2.xxx

--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-BuffCore-v0.001"
+CONFIG_LOCALVERSION="-Buffcore-v2.001-only for use on Buff99 & JDC roms-"
 CONFIG_KERNEL_XZ=y
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
