--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -552,15 +552,28 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 
-CONFIG_FAT_FS=y
-CONFIG_FAT_DEFAULT_CODEPAGE=437
-CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-CONFIG_EXFAT_FS=y
-CONFIG_EXFAT_DEFAULT_CODEPAGE=437
-CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+# CONFIG_MSDOS_FS is not set
+# CONFIG_FAT_FS=is not set
+# CONFIG_VFAT_FS is not set
+# CONFIG_EXFAT_FS is not set
+# CONFIG_NTFS_FS is not set
+
+CONFIG_SDFAT_FS=y
+CONFIG_SDFAT_USE_FOR_EXFAT=y
+CONFIG_SDFAT_USE_FOR_VFAT=y
+CONFIG_SDFAT_DELAYED_META_DIRTY=y
+CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
+CONFIG_SDFAT_DEFAULT_CODEPAGE=437
+CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_SDFAT_CHECK_RO_ATTR=y
+CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
+CONFIG_SDFAT_VIRTUAL_XATTR=y
+CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
+CONFIG_SDFAT_SUPPORT_STLOG=y
+# CONFIG_SDFAT_DEBUG is not set
+CONFIG_SDFAT_STATISTICS=y
 
 CONFIG_FUSE_FS=y
-CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_CONFIGFS_FS=y
 CONFIG_SDCARD_FS=y
