--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-BUFFCORE_2.02-for_use_with_BUFF_/_JDC_roms"
+CONFIG_LOCALVERSION="-BuffCorE_2.03-for_use_with_BUFF+JDC_roms"
 CONFIG_KERNEL_XZ=y
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
