defconfig: fix commented out hotplug

--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -605,7 +605,7 @@ CONFIG_LIBCRC32C=y
 
 #Custom edits
 
-# CONFIG_HOTPLUG_CPU=y
+# CONFIG_HOTPLUG_CPU= is not set
 CONFIG_HOTPLUG=y
 
 CONFIG_DECOMPRESS_LZMA=y
