--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -1,9 +1,10 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-aosp"
+CONFIG_LOCALVERSION="-BUFFcore_2.09-only_for_BUFF+JDC_roms"
 CONFIG_KERNEL_XZ=y
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
+CONFIG_RCU_BOOST=y
 CONFIG_IKCONFIG=y
 CONFIG_LOG_BUF_SHIFT=18
 CONFIG_CGROUPS=y
@@ -16,7 +17,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
-# CONFIG_NET_NS is not set
+CONFIG_NET_NS=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_LZMA=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
@@ -32,6 +33,7 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_FIOPS=y
 CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
@@ -83,6 +85,7 @@ CONFIG_SMP=y
 # CONFIG_SMP_ON_UP is not set
 CONFIG_SCHED_MC=y
 CONFIG_PREEMPT=y
+CONFIG_QUOTA=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_VMALLOC_RESERVE=0x19000000
@@ -91,11 +94,14 @@ CONFIG_SECCOMP=y
 CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CPU_FREQ=y
 CONFIG_SCHED_FREQ_INPUT=y
+
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
@@ -119,9 +125,21 @@ CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 # CONFIG_INET_LRO is not set
+
 CONFIG_TCP_CONG_ADVANCED=y
-# CONFIG_TCP_CONG_BIC is not set
-# CONFIG_TCP_CONG_HTCP is not set
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
+
 CONFIG_IPV6_PRIVACY=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
@@ -237,6 +255,7 @@ CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
+CONFIG_BLUEDROID_PM=y
 CONFIG_SAMSUNG_JACK=y
 CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
@@ -496,6 +515,8 @@ CONFIG_RTC_DRV_PM8XXX=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+# CONFIG_ANDROID_BINDER_IPC_32BIT is not set
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -531,8 +552,29 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
+
+# CONFIG_MSDOS_FS is not set
+# CONFIG_FAT_FS=is not set
+# CONFIG_VFAT_FS is not set
+# CONFIG_EXFAT_FS is not set
+# CONFIG_NTFS_FS is not set
+
+CONFIG_SDFAT_FS=y
+CONFIG_SDFAT_USE_FOR_EXFAT=y
+CONFIG_SDFAT_USE_FOR_VFAT=y
+CONFIG_SDFAT_DELAYED_META_DIRTY=y
+CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
+CONFIG_SDFAT_DEFAULT_CODEPAGE=437
+CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_SDFAT_CHECK_RO_ATTR=y
+CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
+CONFIG_SDFAT_VIRTUAL_XATTR=y
+CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
+CONFIG_SDFAT_SUPPORT_STLOG=y
+# CONFIG_SDFAT_DEBUG is not set
+CONFIG_SDFAT_STATISTICS=y
+
 CONFIG_FUSE_FS=y
-CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_CONFIGFS_FS=y
 CONFIG_SDCARD_FS=y
@@ -560,5 +602,21 @@ CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRC_CCITT=y
 CONFIG_LIBCRC32C=y
+
+#Custom edits
+
+# CONFIG_HOTPLUG_CPU= is not set
+CONFIG_HOTPLUG=y
+
 CONFIG_DECOMPRESS_LZMA=y
+
+CONFIG_MSM_CPUFREQ_LIMITER=y
+
+CONFIG_CPU_VOLTAGE_TABLE=y
+
+CONFIG_AUTOSMP=y
+
+CONFIG_LOW_CPUCLOCKS=y
+
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
