--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-SIDEcore_2.09-only_for_BUFF+JDC_roms"
+CONFIG_LOCALVERSION="-SIDEcore_2.09b-only_for_BUFF+JDC"
 CONFIG_KERNEL_XZ=y
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
