--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -79,7 +79,14 @@ CONFIG_MSM_HSIC_SYSMON=y
 CONFIG_SEC_THERMISTOR=y
 CONFIG_HAS_MACH_MEMUTILS=y
 CONFIG_STRICT_MEMORY_RWX=y
+
 CONFIG_NO_HZ=y
+# CONFIG_HZ_100 is not set
+# CONFIG_HZ_250 is not set
+CONFIG_HZ_300=y
+# CONFIG_HZ_1000 is not set
+CONFIG_HZ=300
+
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SMP=y
 # CONFIG_SMP_ON_UP is not set
