--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -1,7 +1,7 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-SIDEcore_2.15-only_for_BUFF+JDC"
-CONFIG_KERNEL_XZ=y
+# CONFIG_KERNEL_XZ=y
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_BOOST=y
@@ -634,3 +634,6 @@ CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_ANDROID_DOZE_HELPER=y
 
 CONFIG_QUICK_WAKEUP=y
+
+CONFIG_HAVE_KERNEL_GZIP=y
+CONFIG_KERNEL_GZIP=y
