--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -623,7 +623,7 @@ CONFIG_CPU_VOLTAGE_TABLE=y
 
 CONFIG_AUTOSMP=y
 
-CONFIG_LOW_CPUCLOCKS=y
+# CONFIG_LOW_CPUCLOCKS is not set
 
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
