--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -1,7 +1,7 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-BUFFcore_2.15-only_for_BUFF+JDC"
-CONFIG_KERNEL_XZ=y
+# CONFIG_KERNEL_XZ is not set
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_BOOST=y
@@ -623,7 +623,7 @@ CONFIG_CPU_VOLTAGE_TABLE=y
 
 CONFIG_AUTOSMP=y
 
-CONFIG_LOW_CPUCLOCKS=y
+# CONFIG_LOW_CPUCLOCKS is not set
 
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
@@ -634,3 +634,8 @@ CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_ANDROID_DOZE_HELPER=y
 
 CONFIG_QUICK_WAKEUP=y
+
+CONFIG_HAVE_KERNEL_GZIP=y
+CONFIG_KERNEL_GZIP=y
+
+CONFIG_STATE_NOTIFIER=y
