--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -612,7 +612,7 @@ CONFIG_LIBCRC32C=y
 
 #Custom edits
 
-# CONFIG_HOTPLUG_CPU= is not set
+# CONFIG_HOTPLUG_CPU is not set
 CONFIG_HOTPLUG=y
 
 CONFIG_DECOMPRESS_LZMA=y
