Initial KCAL control for our jf
Change-Id: I770bc4dc7d9908d83e5f4c2bc6cb81a4ed31e655

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2854,6 +2854,12 @@ config MSM_USE_USER_ACCESSIBLE_TIMERS
 	  Enables MSM-specific user accessible timers via a shared
 	  memory page containing the cycle counter.
 
+config LCD_KCAL
+	tristate "MSM generic LCDC Calibration"
+	default n
+	help
+	  Enable MSM generic LCDC temperature Calibration.
+	  
 config SEC_THERMISTOR
 	bool "Use external thermistor near AP for checking temprature"
 	default n
