--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1524,6 +1524,7 @@ config ARM_ERRATA_775420
 endmenu
 
 source "arch/arm/common/Kconfig"
+source "arch/arm/hotplug/Kconfig"
 
 menu "Bus support"
 
