configs:Disable autosmp
Change-Id: Ibd21118f271fb3a86abdc4b560f27280a1716d60

--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -621,7 +621,7 @@ CONFIG_MSM_CPUFREQ_LIMITER=y
 
 CONFIG_CPU_VOLTAGE_TABLE=y
 
-CONFIG_AUTOSMP=y
+# CONFIG_AUTOSMP is not set
 
 # CONFIG_LOW_CPUCLOCKS is not set
 
