--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -1,31 +1,40 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
+CONFIG_ARCH_RANDOM=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-Buffcore_2.17-only_for_BUFF+JDC"
-# CONFIG_KERNEL_XZ is not set
+CONFIG_KERNEL_XZ=y
+CONFIG_TASKSTATS=y
+CONFIG_TASK_DELAY_ACCT=y
+CONFIG_TASK_XACCT=y
+CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_BOOST=y
 CONFIG_IKCONFIG=y
-CONFIG_LOG_BUF_SHIFT=18
+CONFIG_IKCONFIG_PROC=y
 CONFIG_CGROUPS=y
+CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
+CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
 CONFIG_CGROUP_SCHED=y
+CONFIG_CFS_BANDWIDTH=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
-CONFIG_NET_NS=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_LZMA=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_ASHMEM=y
 CONFIG_EMBEDDED=y
+# CONFIG_SLUB_DEBUG is not set
+# CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
-CONFIG_OPROFILE=y
 CONFIG_JUMP_LABEL=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
@@ -33,7 +42,6 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
-CONFIG_IOSCHED_FIOPS=y
 CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
@@ -47,21 +55,29 @@ CONFIG_KERNEL_MSM_CONTIG_MEM_REGION=y
 # CONFIG_MSM_PROC_COMM is not set
 CONFIG_MSM_SMD=y
 CONFIG_MSM_SMD_PKG4=y
+# CONFIG_MSM_SMD_DEBUG is not set
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_IPC_LOGGING=y
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
+CONFIG_MSM_IPC_ROUTER_HSIC_XPRT=y
 CONFIG_MSM_IPC_ROUTER_SECURITY=y
+CONFIG_MSM_CPUFREQ_LIMITER=y
+CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_MSM_AVS_HW=y
 # CONFIG_MSM_HW3D is not set
+# CONFIG_MSM_DMA_TEST is not set
 CONFIG_WIFI_CONTROL_FUNC=y
+# CONFIG_SURF_FFA_GPIO_KEYPAD is not set
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_PIL_QDSP6V4=y
 CONFIG_MSM_PIL_TZAPPS=y
 CONFIG_MSM_PIL_VIDC=y
+CONFIG_MSM_PIL_GSS=y
 CONFIG_MSM_MODEM_8960=y
 CONFIG_MSM_LPASS_8960=y
+# CONFIG_MSM_BUSPM_DEV is not set
 CONFIG_MSM_HSIC_GPIO_REV06=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_BUS_SCALING=y
@@ -70,6 +86,7 @@ CONFIG_MSM_WATCHDOG=y
 CONFIG_MSM_DLOAD_MODE=y
 CONFIG_BT_BCM4335=y
 CONFIG_MSM_RTB=y
+CONFIG_MSM_RTB_SEPARATE_CPUS=y
 CONFIG_MSM_EBI_ERP=y
 CONFIG_MSM_CACHE_ERP=y
 CONFIG_MSM_L1_ERR_PANIC=y
@@ -77,22 +94,15 @@ CONFIG_MSM_L1_ERR_LOG=y
 CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 CONFIG_MSM_HSIC_SYSMON=y
 CONFIG_SEC_THERMISTOR=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_HAS_MACH_MEMUTILS=y
-CONFIG_STRICT_MEMORY_RWX=y
-
 CONFIG_NO_HZ=y
-# CONFIG_HZ_100 is not set
-# CONFIG_HZ_250 is not set
-CONFIG_HZ_300=y
-# CONFIG_HZ_1000 is not set
-CONFIG_HZ=300
-
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SMP=y
 # CONFIG_SMP_ON_UP is not set
 CONFIG_SCHED_MC=y
 CONFIG_PREEMPT=y
-CONFIG_QUOTA=y
+CONFIG_HZ_300=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_VMALLOC_RESERVE=0x19000000
@@ -101,21 +111,22 @@ CONFIG_SECCOMP=y
 CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CPU_FREQ=y
 CONFIG_SCHED_FREQ_INPUT=y
-
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
 CONFIG_KERNEL_MODE_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
-CONFIG_WAKELOCK=y
+CONFIG_PM_AUTOSLEEP=y
+CONFIG_PM_WAKELOCKS=y
+CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_RUNTIME=y
+CONFIG_PM_DEBUG=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -132,21 +143,14 @@ CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 # CONFIG_INET_LRO is not set
-
+CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_BIC=y
-CONFIG_TCP_CONG_HTCP=y
-CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_TCP_CONG_VEGAS=y
 CONFIG_TCP_CONG_SCALABLE=y
 CONFIG_TCP_CONG_LP=y
 CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_DEFAULT_WESTWOOD=y
-CONFIG_DEFAULT_TCP_CONG="westwood"
-
 CONFIG_IPV6_PRIVACY=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
@@ -158,7 +162,6 @@ CONFIG_IPV6_MIP6=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
 CONFIG_NETFILTER=y
-CONFIG_NETFILTER_NETLINK_LOG=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_SECMARK=y
 CONFIG_NF_CONNTRACK_EVENTS=y
@@ -177,9 +180,12 @@ CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_NETFILTER_XT_TARGET_LOG=y
 CONFIG_NETFILTER_XT_TARGET_MARK=y
+CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 CONFIG_NETFILTER_XT_TARGET_NOTRACK=y
 CONFIG_NETFILTER_XT_TARGET_TEE=y
+CONFIG_NETFILTER_XT_TARGET_TPROXY=y
+CONFIG_NETFILTER_XT_TARGET_TRACE=y
 CONFIG_NETFILTER_XT_TARGET_SECMARK=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
@@ -204,6 +210,7 @@ CONFIG_NETFILTER_XT_MATCH_SOCKET=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_NETFILTER_XT_MATCH_STATISTIC=y
 CONFIG_NETFILTER_XT_MATCH_STRING=y
+CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
 CONFIG_NF_CONNTRACK_IPV4=y
@@ -226,11 +233,21 @@ CONFIG_IP_NF_ARPFILTER=y
 CONFIG_IP_NF_ARP_MANGLE=y
 CONFIG_NF_CONNTRACK_IPV6=y
 CONFIG_IP6_NF_IPTABLES=y
+CONFIG_IP6_NF_MATCH_AH=y
+CONFIG_IP6_NF_MATCH_EUI64=y
+CONFIG_IP6_NF_MATCH_FRAG=y
+CONFIG_IP6_NF_MATCH_OPTS=y
+CONFIG_IP6_NF_MATCH_HL=y
+CONFIG_IP6_NF_MATCH_IPV6HEADER=y
+CONFIG_IP6_NF_MATCH_MH=y
 CONFIG_IP6_NF_MATCH_RPFILTER=y
+CONFIG_IP6_NF_MATCH_RT=y
+CONFIG_IP6_NF_TARGET_HL=y
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
+CONFIG_IP6_NF_SECURITY=y
 CONFIG_BRIDGE_NF_EBTABLES=y
 CONFIG_BRIDGE_EBT_BROUTE=y
 CONFIG_BRIDGE=y
@@ -252,17 +269,18 @@ CONFIG_BT_HIDP=y
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
 CONFIG_CFG80211=y
+CONFIG_NL80211_TESTMODE=y
+CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_WIRELESS_EXT_SYSFS=y
 CONFIG_CFG80211_ALLOW_RECONNECT=y
 CONFIG_RFKILL=y
 CONFIG_EXTRA_FIRMWARE="audience-es325-fw-eur.bin"
-CONFIG_GENLOCK=y
-CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
+CONFIG_CMA=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
-CONFIG_BLUEDROID_PM=y
+CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_SAMSUNG_JACK=y
 CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
@@ -271,6 +289,7 @@ CONFIG_USB_HSIC_SMSC_HUB=y
 CONFIG_BCM2079X_NFC_I2C=y
 # CONFIG_TIMA_LOG is not set
 CONFIG_UID_CPUTIME=y
+CONFIG_BLUEDROID_PM=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
@@ -283,24 +302,31 @@ CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
+CONFIG_DM_UEVENT=y
 CONFIG_NETDEVICES=y
+CONFIG_DUMMY=y
 CONFIG_TUN=y
 # CONFIG_ETHERNET is not set
 CONFIG_PHYLIB=y
 CONFIG_PPP=y
 CONFIG_PPP_BSDCOMP=y
 CONFIG_PPP_DEFLATE=y
+CONFIG_PPP_FILTER=y
 CONFIG_PPP_MPPE=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
+CONFIG_PPP_ASYNC=y
+CONFIG_SLIP=y
+CONFIG_SLIP_COMPRESSED=y
+CONFIG_SLIP_MODE_SLIP6=y
 CONFIG_USB_USBNET=y
 # CONFIG_USB_NET_AX8817X is not set
 # CONFIG_USB_NET_NET1080 is not set
 # CONFIG_USB_BELKIN is not set
 CONFIG_MSM_RMNET_USB=y
 CONFIG_BCM4335=y
-CONFIG_BCMDHD_FW_PATH="/system/etc/wifi/bcmdhd_sta.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
+CONFIG_BCMDHD_FW_PATH="/vendor/etc/wifi/bcmdhd_sta.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/vendor/etc/wifi/nvram_net.txt"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_WLAN_REGION_CODE=400
 CONFIG_INPUT_EVDEV=y
@@ -414,6 +440,8 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
+# CONFIG_SND_ARM is not set
+# CONFIG_SND_SPI is not set
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MSM8960=y
@@ -486,6 +514,7 @@ CONFIG_USB_SERIAL_CSVT=y
 CONFIG_USB_QCOM_DIAG_BRIDGE=y
 CONFIG_USB_QCOM_MDM_BRIDGE=y
 CONFIG_USB_QCOM_KS_BRIDGE=y
+CONFIG_USB_QCOM_IPC_BRIDGE=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DEBUG_FILES=y
 CONFIG_USB_CI13XXX_MSM=y
@@ -501,10 +530,6 @@ CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_BLOCK_MINORS=32
 # CONFIG_MMC_BLOCK_BOUNCE is not set
-CONFIG_MMC_TEST=y
-CONFIG_MMC_SUPPORT_BKOPS_MODE=y
-CONFIG_MMC_BKOPS_NODE_UID=1000
-CONFIG_MMC_BKOPS_NODE_GID=1001
 CONFIG_MMC_MSM=y
 CONFIG_MMC_MSM_SDC1_8_BIT_SUPPORT=y
 CONFIG_MMC_MSM_SDC3_SUPPORT=y
@@ -519,22 +544,20 @@ CONFIG_SWITCH=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_DRV_MSM is not set
 CONFIG_RTC_DRV_PM8XXX=y
+CONFIG_UIO=y
+CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 # CONFIG_ANDROID_BINDER_IPC_32BIT is not set
-CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_MSM_SSBI=y
 CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_BAMDMA=y
 CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_IOMMU=y
-CONFIG_MOBICORE_SUPPORT=y
-CONFIG_MOBICORE_API=y
 CONFIG_BATTERY_SAMSUNG=y
 CONFIG_FUELGAUGE_MAX17048=y
 CONFIG_CHARGER_MAX77693=y
@@ -559,85 +582,36 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
-
-# CONFIG_MSDOS_FS is not set
-# CONFIG_FAT_FS=is not set
-# CONFIG_VFAT_FS is not set
-# CONFIG_EXFAT_FS is not set
-# CONFIG_NTFS_FS is not set
-
-CONFIG_SDFAT_FS=y
-CONFIG_SDFAT_USE_FOR_EXFAT=y
-CONFIG_SDFAT_USE_FOR_VFAT=y
-CONFIG_SDFAT_DELAYED_META_DIRTY=y
-CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
-CONFIG_SDFAT_DEFAULT_CODEPAGE=437
-CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
-CONFIG_SDFAT_CHECK_RO_ATTR=y
-CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
-CONFIG_SDFAT_VIRTUAL_XATTR=y
-CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
-CONFIG_SDFAT_SUPPORT_STLOG=y
-# CONFIG_SDFAT_DEBUG is not set
-CONFIG_SDFAT_STATISTICS=y
-
+CONFIG_QUOTA=y
 CONFIG_FUSE_FS=y
+CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
+CONFIG_SDFAT_CHECK_RO_ATTR=y
+# CONFIG_SDFAT_DEBUG is not set
 CONFIG_TMPFS=y
+CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_CONFIGFS_FS=y
 CONFIG_SDCARD_FS=y
 CONFIG_CIFS=y
-CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
-CONFIG_NLS_ISO8859_1=y
-CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
 CONFIG_MAGIC_SYSRQ=y
-CONFIG_DEBUG_MEMORY_INIT=y
+# CONFIG_RCU_CPU_STALL_VERBOSE is not set
+# CONFIG_EVENT_POWER_TRACING_DEPRECATED is not set
 CONFIG_FTRACE=y
 CONFIG_SCHED_TRACER=y
 # CONFIG_SEC_DEBUG_USER is not set
-CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_SECURITY_SELINUX=y
+CONFIG_SECURITY_SELINUX_BOOTPARAM=y
+CONFIG_SECURITY_SELINUX_DISABLE=y
+CONFIG_CRYPTO_NULL=y
+CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_SHA1_ARM_NEON=y
 CONFIG_CRYPTO_SHA512_ARM_NEON=y
 CONFIG_CRYPTO_AES_ARM_BS=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZO=y
-CONFIG_CRC_CCITT=y
 CONFIG_LIBCRC32C=y
-
-#Custom edits
-
-# CONFIG_HOTPLUG_CPU is not set
-CONFIG_HOTPLUG=y
-
-CONFIG_DECOMPRESS_LZMA=y
-
-CONFIG_MSM_CPUFREQ_LIMITER=y
-
-CONFIG_CPU_VOLTAGE_TABLE=y
-
-# CONFIG_AUTOSMP is not set
-
-# CONFIG_LOW_CPUCLOCKS is not set
-
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
-
-CONFIG_BOEFFLA_WL_BLOCKER=y
-
-CONFIG_FORCE_FAST_CHARGE=y
-
-CONFIG_ANDROID_DOZE_HELPER=y
-
-CONFIG_QUICK_WAKEUP=y
-
-CONFIG_HAVE_KERNEL_GZIP=y
-CONFIG_KERNEL_GZIP=y
-
-CONFIG_STATE_NOTIFIER=y
-
-CONFIG_INTELLI_PLUG=y
