defconfig: Revive BuffCore
Change-Id: Ib29fd8c3cab1c51e641754d0a7bd31b42bd2b309

--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -615,3 +615,21 @@ CONFIG_CRYPTO_AES_ARM_BS=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZO=y
 CONFIG_LIBCRC32C=y
+
+#Custom edits
+# CONFIG_HOTPLUG_CPU is not set
+CONFIG_HOTPLUG=y
+CONFIG_DECOMPRESS_LZMA=y
+CONFIG_MSM_CPUFREQ_LIMITER=y
+CONFIG_CPU_VOLTAGE_TABLE=y
+# CONFIG_AUTOSMP is not set
+# CONFIG_LOW_CPUCLOCKS is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_ANDROID_DOZE_HELPER=y
+CONFIG_QUICK_WAKEUP=y
+CONFIG_HAVE_KERNEL_GZIP=y
+CONFIG_KERNEL_GZIP=y
+CONFIG_STATE_NOTIFIER=y
+CONFIG_INTELLI_PLUG=y
