--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -627,7 +627,7 @@ CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_FORCE_FAST_CHARGE=y
-CONFIG_ANDROID_DOZE_HELPER=y
+#CONFIG_ANDROID_DOZE_HELPER=y
 CONFIG_QUICK_WAKEUP=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_KERNEL_GZIP=y
