--- a/drivers/media/video/msm/Kconfig
+++ b/drivers/media/video/msm/Kconfig
@@ -102,14 +102,14 @@ config MT9P012
 choice
 	prompt "AF module"
 	depends on MT9P012 && !ARCH_MSM8X60 && !MSM_CAMERA_V4L2
-	default MSM_CAMERA_AF_FOXCONN
+	default MSM_CAMERA_AF_FOXCONN_MSM
 
-config MSM_CAMERA_AF_FOXCONN
+config MSM_CAMERA_AF_FOXCONN_MSM
 	bool "FOXCONN Module"
 	help
 	  This driver supports FOXCONN AF module for 5M Bayer sensor
 
-config MSM_CAMERA_AF_BAM
+config MSM_CAMERA_AF_BAM_MSM
 	bool "BAM Module"
 	help
 	  This driver supports BAM AF module for 5M Bayer sensor
