defconfigs: Disable CPU-suspicious stuff
1-msm limiter. i never understood why we need this

2-PowerEfficience stuff always holds cpu down

3-quick wakeup stuff is not needed since we have state notifier

Change-Id: I8761c9f327c6e10c022eef33ee65c672d625c876

--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -628,14 +628,14 @@ CONFIG_LIBCRC32C=y
 # CONFIG_HOTPLUG_CPU is not set
 CONFIG_HOTPLUG=y
 CONFIG_DECOMPRESS_LZMA=y
-CONFIG_MSM_CPUFREQ_LIMITER=y
+# CONFIG_MSM_CPUFREQ_LIMITER is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_AUTOSMP is not set
 # CONFIG_LOW_CPUCLOCKS is not set
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_FORCE_FAST_CHARGE=y
-CONFIG_QUICK_WAKEUP=y
+# CONFIG_QUICK_WAKEUP is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_KERNEL_GZIP=y
 CONFIG_STATE_NOTIFIER=y
