--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -450,7 +450,10 @@ CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
 # CONFIG_SND_ARM is not set
 # CONFIG_SND_SPI is not set
+CONFIG_SND_USB=y
 CONFIG_SND_USB_AUDIO=y
+CONFIG_SND_USB_MIDI=y
+CONFIG_SND_RAWMIDI=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MSM8960=y
 CONFIG_SND_SOC_ES325=y
