defconfig: Enable deadline IO
Change-Id: I49c290836a0bbc6dc3fac112d24434006188e4e0

--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -39,7 +39,6 @@ CONFIG_JUMP_LABEL=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
-# CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_DEFAULT_NOOP=y
@@ -650,3 +649,5 @@ CONFIG_IOSCHED_ZEN=y
 
 CONFIG_IOSCHED_TRIPNDROID=y
 #CONFIG_DEFAULT_TRIPNDROID is not set
+
+CONFIG_IOSCHED_DEADLINE=y
