buff_defconfig: Sync with side's
Change-Id: I88cea533a6500be0c0ae0e024a93cede42adf859

--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -39,7 +39,6 @@ CONFIG_JUMP_LABEL=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
-# CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_DEFAULT_NOOP=y
@@ -638,8 +637,17 @@ CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_FORCE_FAST_CHARGE=y
+
 # CONFIG_QUICK_WAKEUP is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_KERNEL_GZIP=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_INTELLI_PLUG=y
+
+CONFIG_IOSCHED_ZEN=y
+#CONFIG_DEFAULT_ZEN is not set
+
+CONFIG_IOSCHED_TRIPNDROID=y
+#CONFIG_DEFAULT_TRIPNDROID is not set
+
+CONFIG_IOSCHED_DEADLINE=y
