drivers: LCD: Allow gamma control
Change-Id: I977db1a87b39ec93541822bce798ead4d41b6bec

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -780,7 +780,13 @@ config BLUEDROID_PM
 
           Say Y here to compile support for bluedroid_pm support into the kernel
           or say M to compile it as module (bluedroid_pm).
-
+          
+config GAMMA_CONTROL
+       bool "Gamma Control for OLED"
+       depends on FB_MSM_MIPI_DSI_SAMSUNG_OCTA
+       default y
+       help
+       This adds full support for shifting RGB panel colors.
 
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
