mach-msm: Forcely use the mach optimized memcpy functions
Change-Id: Iae15bfc52d9c378ac3d334cf05c42da0ffc952f3

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -170,6 +170,7 @@ config ARCH_MSM8960
 	select MSM_IOMMU_GPU_SYNC
 	select MSM_CPU_PWRCTL
 	select GENERIC_TIME_VSYSCALL
+	select HAS_MACH_MEMUTILS
 
 config ARCH_MSM8930
 	bool "MSM8930"
@@ -203,6 +204,7 @@ config ARCH_MSM8930
 	select MSM_CPU_PWRCTL
 	select GENERIC_TIME_VSYSCALL
 	select ENABLE_VMALLOC_SAVINGS
+	select HAS_MACH_MEMUTILS
 
 config ARCH_APQ8064
 	bool "APQ8064"
@@ -234,6 +236,7 @@ config ARCH_APQ8064
 	select MSM_CPU_PWRCTL
 	select GENERIC_TIME_VSYSCALL
 	select ENABLE_VMALLOC_SAVINGS
+	select HAS_MACH_MEMUTILS
 
 config ARCH_MSM8974
 	bool "MSM8974"
@@ -259,6 +262,7 @@ config ARCH_MSM8974
 	select MSM_RPM_REGULATOR_SMD
 	select ARM_HAS_SG_CHAIN
 	select MSM_RUN_QUEUE_STATS
+	select HAS_MACH_MEMUTILS
 
 config ARCH_MPQ8092
 	bool "MPQ8092"
