arch: Rewrite the overclock feature from scratch
Change-Id: Ie49e108332b6c5a7f18a0a50fb51ad077be15509

--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -632,7 +632,6 @@ CONFIG_DECOMPRESS_LZMA=y
 # CONFIG_MSM_CPUFREQ_LIMITER is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_AUTOSMP is not set
-# CONFIG_LOW_CPUCLOCKS is not set
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_FORCE_FAST_CHARGE=y
@@ -652,3 +651,8 @@ CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_DEADLINE=y
 
 CONFIG_CC_OPTIMIZE_FOR_SPEED=y
+
+CONFIG_MSM_CPUFREQ_LIMITER=m
+CONFIG_LOW_CPUCLOCKS=y
+CONFIG_CPU_OVERCLOCK=y
+CONFIG_OC_ULTIMATE=y
