--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1789,15 +1789,27 @@ config MSM_CPU_FREQ_MIN
 
 endif # CPU_FREQ_MSM
 
+
+config CPU_OVERCLOCK
+       bool "Enable CPU Overclocking option"
+       default n
+       help
+         Krait overclocking up to 2.1 GHz
+
+config OC_ULTIMATE
+       bool "Ultimate CPU Overclocking"
+       depends on CPU_OVERCLOCK
+       default n
+       help
+         Ultimate Krait overclocking up to 2.3 GHz
+
 config MSM_CPUFREQ_LIMITER
 	tristate "MSM CPU frequency limiter"
 	default n
 	help
 	  This driver limits MSM CPU frequency through sysfs file system.
-
 	  To compile this driver as a module, choose M here: the
 	  module will be called cpufreq_stats.
-
 	  If in doubt, say N.
 
 config CPU_VOLTAGE_TABLE
