defconfigs: Set CFQ as default iosched
Change-Id: I8f08808f779a5b7720c00ebdfea12042aa6ce8e4

--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -40,7 +40,7 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
-CONFIG_DEFAULT_NOOP=y
+#CONFIG_DEFAULT_NOOP is not set
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
 CONFIG_ARCH_APQ8064=y
@@ -656,3 +656,8 @@ CONFIG_MSM_CPUFREQ_LIMITER=m
 CONFIG_LOW_CPUCLOCKS=y
 CONFIG_CPU_OVERCLOCK=y
 CONFIG_OC_ULTIMATE=y
+
+#CFQ
+CONFIG_IOSCHED_CFQ=y
+CONFIG_DEFAULT_CFQ=y
+CONFIG_DEFAULT_IOSCHED="cfq"
