defconfigs: Disable 2.3 GHz OC
Change-Id: I1e588512113c7c6e0b9743916f38ebf0005cc095

--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -655,7 +655,7 @@ CONFIG_CC_OPTIMIZE_FOR_SPEED=y
 CONFIG_MSM_CPUFREQ_LIMITER=m
 CONFIG_LOW_CPUCLOCKS=y
 CONFIG_CPU_OVERCLOCK=y
-CONFIG_OC_ULTIMATE=y
+#CONFIG_OC_ULTIMATE is not set
 
 #CFQ
 CONFIG_IOSCHED_CFQ=y
