--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -655,7 +655,7 @@ CONFIG_CC_OPTIMIZE_FOR_SPEED=y
 CONFIG_MSM_CPUFREQ_LIMITER=m
 CONFIG_LOW_CPUCLOCKS=y
 CONFIG_CPU_OVERCLOCK=y
-CONFIG_OC_ULTIMATE=y
+#CONFIG_OC_ULTIMATE is not set
 
 #CFQ
 CONFIG_IOSCHED_CFQ=y
