defconfigs: disable OC on buff builds for now
- Also label side build as 's' and buff builds 'b'

--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -1,7 +1,7 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_ARCH_RANDOM=y
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-JDCTeam-BuffCore_4.3"
+CONFIG_LOCALVERSION="-JDCTeam-BuffCore_4.3b"
 CONFIG_KERNEL_XZ=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
@@ -654,7 +654,7 @@ CONFIG_CC_OPTIMIZE_FOR_SPEED=y
 
 CONFIG_MSM_CPUFREQ_LIMITER=m
 CONFIG_LOW_CPUCLOCKS=y
-CONFIG_CPU_OVERCLOCK=y
+#CONFIG_CPU_OVERCLOCK is not set
 #CONFIG_OC_ULTIMATE is not set
 
 #CFQ
