--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -1,7 +1,7 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_ARCH_RANDOM=y
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-JDCTeam-BuffCore_4.3"
+CONFIG_LOCALVERSION="-JDCTeam-BuffCore_4.3s"
 CONFIG_KERNEL_XZ=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
