defconfigs: Disable CONFIG_CMA
Change-Id: Iaf8d7ffa1de96330594b9c4160e9e84746fb01ed

--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -279,7 +279,7 @@ CONFIG_RFKILL=y
 CONFIG_EXTRA_FIRMWARE="audience-es325-fw-eur.bin"
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
-CONFIG_CMA=y
+# CONFIG_CMA is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
