defconfig: Set CONFIG_BCM4335BT

--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -327,6 +327,7 @@ CONFIG_USB_USBNET=y
 # CONFIG_USB_BELKIN is not set
 CONFIG_MSM_RMNET_USB=y
 CONFIG_BCM4335=y
+CONFIG_BCM4335BT=y
 CONFIG_BCMDHD_FW_PATH="/vendor/etc/wifi/bcmdhd_sta.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/vendor/etc/wifi/nvram_net.txt"
 CONFIG_BCMDHD_USE_SCHED_SCAN=y
