defconfig: Clean up

--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -2,6 +2,7 @@
 CONFIG_ARCH_RANDOM=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-JDCTeam-TWRP-"
+CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_KERNEL_XZ=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
@@ -617,50 +618,23 @@ CONFIG_CRYPTO_LZO=y
 CONFIG_LIBCRC32C=y
 
 #Custom edits
-# CONFIG_HOTPLUG_CPU is not set
 CONFIG_HOTPLUG=y
-# CONFIG_DECOMPRESS_LZMA=y
-# CONFIG_AUTOSMP is not set
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
-# CONFIG_QUICK_WAKEUP is not set
-#CONFIG_HAVE_KERNEL_GZIP is not set
-#CONFIG_KERNEL_GZIP is not set
 CONFIG_INTELLI_PLUG=y
-CONFIG_IOSCHED_ZEN=y
-#CONFIG_DEFAULT_ZEN is not set
-#CONFIG_DEFAULT_TRIPNDROID is not set
 CONFIG_CC_OPTIMIZE_FOR_SPEED=y
-#CONFIG_CPU_OVERCLOCK is not set
-#CONFIG_OC_ULTIMATE is not set
+
 CONFIG_IOSCHED_CFQ=y
 CONFIG_DEFAULT_CFQ=y
 CONFIG_DEFAULT_IOSCHED="cfq"
-# CONFIG_CPU_OVERCLOCK is not set
-# CONFIG_GPU_OVERCLOCK is not set
-
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ABYSSPLUG is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_KTOONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SLP is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
 
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 
 CONFIG_CPU_FREQ_GOV_COMMON=y
-
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+
+CONFIG_LZO_COMPRESS=y
+CONFIG_LZO_DECOMPRESS=y
+CONFIG_DECOMPRESS_GZIP=y
+CONFIG_DECOMPRESS_LZMA=y
