defconfigs: Support all compress/decompress types

--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -618,7 +618,19 @@ CONFIG_LIBCRC32C=y
 #Custom edits
 # CONFIG_HOTPLUG_CPU is not set
 CONFIG_HOTPLUG=y
+
+# Compression
 CONFIG_DECOMPRESS_GZIP=y
+CONFIG_DECOMPRESS_BZIP2=y
+CONFIG_DECOMPRESS_LZMA=y
+CONFIG_DECOMPRESS_LZ4=y
+CONFIG_HAVE_KERNEL_GZIP=y
+CONFIG_HAVE_KERNEL_LZMA=y
+CONFIG_HAVE_KERNEL_XZ=y
+CONFIG_HAVE_KERNEL_LZO=y
+CONFIG_HAVE_KERNEL_LZ4=y
+CONFIG_KERNEL_XZ=y
+
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_AUTOSMP is not set
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
