--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -2,7 +2,6 @@
 CONFIG_ARCH_RANDOM=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-JDCTeam-BuffCore_5.1s"
-CONFIG_KERNEL_XZ=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
 CONFIG_TASK_XACCT=y
@@ -618,7 +617,19 @@ CONFIG_LIBCRC32C=y
 #Custom edits
 # CONFIG_HOTPLUG_CPU is not set
 CONFIG_HOTPLUG=y
+
+# Compression
 CONFIG_DECOMPRESS_GZIP=y
+CONFIG_DECOMPRESS_BZIP2=y
+CONFIG_DECOMPRESS_LZMA=y
+CONFIG_DECOMPRESS_LZ4=y
+CONFIG_HAVE_KERNEL_GZIP=y
+CONFIG_HAVE_KERNEL_LZMA=y
+CONFIG_HAVE_KERNEL_XZ=y
+CONFIG_HAVE_KERNEL_LZO=y
+CONFIG_HAVE_KERNEL_LZ4=y
+CONFIG_KERNEL_XZ=y
+
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_AUTOSMP is not set
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
