defconfigs: Tidy up and bump to 5.2

--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -1,7 +1,7 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_ARCH_RANDOM=y
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-JDCTeam-BuffCore_5.1s"
+CONFIG_LOCALVERSION="-JDCTeam-BuffCore_5.2s"
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
 CONFIG_TASK_XACCT=y
@@ -614,10 +614,12 @@ CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZO=y
 CONFIG_LIBCRC32C=y
 
-#Custom edits
-# CONFIG_HOTPLUG_CPU is not set
+################### Buffcore kernel ######################
+# Custom edits
+##########################################################
 CONFIG_HOTPLUG=y
 
+##########################################################
 # Compression
 CONFIG_DECOMPRESS_GZIP=y
 CONFIG_DECOMPRESS_BZIP2=y
@@ -630,49 +632,47 @@ CONFIG_HAVE_KERNEL_LZO=y
 CONFIG_HAVE_KERNEL_LZ4=y
 CONFIG_KERNEL_XZ=y
 
+##########################################################
+# Clocks and voltages
 CONFIG_CPU_VOLTAGE_TABLE=y
-# CONFIG_AUTOSMP is not set
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
-CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_GPU_VOLTAGE_TABLE=y
 CONFIG_FORCE_FAST_CHARGE=y
-# CONFIG_QUICK_WAKEUP is not set
-#CONFIG_HAVE_KERNEL_GZIP is not set
-#CONFIG_KERNEL_GZIP is not set
-CONFIG_STATE_NOTIFIER=y
-CONFIG_INTELLI_PLUG=y
-CONFIG_IOSCHED_ZEN=y
-#CONFIG_DEFAULT_ZEN is not set
+CONFIG_LOW_CPUCLOCKS=y
+
+##########################################################
+# IOScheds
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
 CONFIG_IOSCHED_TRIPNDROID=y
-#CONFIG_DEFAULT_TRIPNDROID is not set
 CONFIG_IOSCHED_DEADLINE=y
-CONFIG_CC_OPTIMIZE_FOR_SPEED=y
-CONFIG_MSM_CPUFREQ_LIMITER=m
-#CONFIG_CPU_OVERCLOCK is not set
-#CONFIG_OC_ULTIMATE is not set
+CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_DEFAULT_CFQ=y
 CONFIG_DEFAULT_IOSCHED="cfq"
+
+##########################################################
+# Misc
+CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_STATE_NOTIFIER=y
+CONFIG_INTELLI_PLUG=y
+CONFIG_CC_OPTIMIZE_FOR_SPEED=y
+CONFIG_MSM_CPUFREQ_LIMITER=m
+
+##########################################################
+# Unused
+# CONFIG_AUTOSMP is not set
+# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+# CONFIG_HOTPLUG_CPU is not set
+# CONFIG_QUICK_WAKEUP is not set
+# CONFIG_HAVE_KERNEL_GZIP is not set
+# CONFIG_KERNEL_GZIP is not set
+# CONFIG_CPU_OVERCLOCK is not set
+# CONFIG_OC_ULTIMATE is not set
 # CONFIG_CPU_OVERCLOCK is not set
 # CONFIG_GPU_OVERCLOCK is not set
-CONFIG_LOW_CPUCLOCKS=y
-CONFIG_GPU_VOLTAGE_TABLE=y
 
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ABYSSPLUG is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_KTOONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SLP is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
-
+##########################################################
+# Governors
 CONFIG_CPU_FREQ_GOV_ABYSSPLUG=y
 CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
 CONFIG_CPU_FREQ_GOV_BADASS=y
@@ -692,5 +692,20 @@ CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 
 CONFIG_CPU_FREQ_GOV_COMMON=y
-
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ABYSSPLUG is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_KTOONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SLP is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
