defconfigs: Enable rbtree for LMK

--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -549,8 +549,6 @@ CONFIG_ANDROID_BINDER_IPC=y
 # CONFIG_ANDROID_BINDER_IPC_32BIT is not set
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_GPIO=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 CONFIG_MSM_SSBI=y
 CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_BAMDMA=y
@@ -719,3 +717,9 @@ CONFIG_KEXEC_HB_PAGE_ADDR=0x8fdff000
 CONFIG_END_MEM=0xffffffff
 CONFIG_HAVE_END_MEM=y
 CONFIG_ATAGS_PROC=y
+
+##########################################################
+# LMK
+CONFIG_ANDROID_LMK_ADJ_RBTREE=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
