defconfigs:Enable zram/zsmalloc/zcache

--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -726,3 +726,10 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 
 # Powersuspend lib
 CONFIG_POWERSUSPEND=y
+
+# ZRAM
+##########################################################
+CONFIG_ZRAM=y
+CONFIG_ZCACHE=y
+CONFIG_ZSMALLOC=y
+CONFIG_STAGING=y
