Kang zram from shamu and use lz4
Change-Id: Ifd5213ad1ee9187d4f9c0e75d6613532bdc9c4ec

--- a/drivers/block/Makefile
+++ b/drivers/block/Makefile
@@ -26,6 +26,7 @@ obj-$(CONFIG_SUNVDC)		+= sunvdc.o
 obj-$(CONFIG_BLK_DEV_NVME)	+= nvme.o
 obj-$(CONFIG_BLK_DEV_OSD)	+= osdblk.o
 
+obj-$(CONFIG_ZRAM) += zram/
 obj-$(CONFIG_BLK_DEV_UMEM)	+= umem.o
 obj-$(CONFIG_BLK_DEV_NBD)	+= nbd.o
 obj-$(CONFIG_BLK_DEV_CRYPTOLOOP) += cryptoloop.o
