defconfig: Enable cpufreq_limiter/autosmp/voltage table
Change-Id: Ib2d6c4e7a7bd088d592c5789601fc86e57d153a5

--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -625,3 +625,4 @@ CONFIG_LOW_CPUCLOCKS=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_AUTOSMP=y
+CONFIG_MSM_CPUFREQ_LIMITER=y
