defconfig: Enable deadline
Change-Id: I43036b18d20b0a9dabd8e37c454deccbba1c994b

--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -43,7 +43,6 @@ CONFIG_MODVERSIONS=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
-# CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_DEFAULT_NOOP=y
@@ -646,3 +645,4 @@ CONFIG_DEFAULT_TCP_CONG="westwood"
 
 CONFIG_IOSCHED_TRIPNDROID=y
 #CONFIG_DEFAULT_TRIPNDROID is not set
+CONFIG_IOSCHED_DEADLINE=y
