defconfigs: Bring back {side|buff} defconfigs
Change-Id: I15a9bf376d924c47687c3b2e871b707c2a3d1551

--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -747,4 +747,4 @@ CONFIG_ZSMALLOC=y
 CONFIG_STAGING=y
 CONFIG_ZRAM_LZ4_COMPRESS=y
 
-CONFIG_LOCALVERSION="-JDCTeam-BuffCore_8.0"
+CONFIG_LOCALVERSION="-JDCTeam-BuffCore_8.0b"
