--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -660,7 +660,7 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_CC_OPTIMIZE_FOR_SPEED=y
-CONFIG_MSM_CPUFREQ_LIMITER=m
+# CONFIG_MSM_CPUFREQ_LIMITER is not set
 
 ##########################################################
 # Unused
