block: Add zen and tripndroid

--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -619,4 +619,8 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 # BuffCore
 CONFIG_FORCE_FAST_CHARGE=y
 
+# Custom ioscheds
+CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_ZEN=y
+
 CONFIG_LOCALVERSION="-JDCTeam-BuffCore_10.0"
