defconfig: Enable AutoSMP

--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -614,6 +614,7 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 # BuffCore
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_AUTOSMP=y
 
 # Custom ioscheds
 CONFIG_IOSCHED_TRIPNDROID=y
