Defconfig: enable Deadline IOscheduler

--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -623,6 +623,7 @@ CONFIG_PM_SYNC_BEFORE_SUSPEND=y
 # Custom ioscheds
 CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_DEADLINE=y
 CONFIG_DEFAULT_DEADLINE=y
 
 # Governors
