defconfig: Enable cpu voltage tables

--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -617,5 +617,6 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 
 # Buffcore
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_CPU_VOLTAGE_TABLE=y
 
 CONFIG_LOCALVERSION="-JDCTeam-BuffCore_10.2"
