defconfig: Enable some TCP congs

--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -619,4 +619,10 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 
+# TCP
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_WESTWOOD=y
+
 CONFIG_LOCALVERSION="-JDCTeam-BuffCore_10.2"
