defconfig: Enable kernel samepage merger

--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -619,6 +619,7 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_QUICK_WAKEUP=y
+CONFIG_KSM=y
 
 # TCP
 CONFIG_TCP_CONG_CUBIC=y
